<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linlayTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="non"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="PK"
            android:layout_marginEnd="20dp"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button0.1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:text="0.1"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button0.01"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:text="0.01"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button0.001"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:text="0.001"
            android:textStyle="bold"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/LinlayBig"
        android:layout_below="@+id/linlayTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaut1"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonInc1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="+"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewPK1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="0.31"/>
            <Button
                android:id="@+id/buttonDec1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="-"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jaut1"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonInc2"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="+"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewPK2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="0.31"/>

        <Button
            android:id="@+id/buttonDec2"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="-"
            android:textStyle="bold"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="2dp">

                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jaut3"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/buttonInc3"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:text="+"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textViewPK3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="0.31"/>

                <Button
                    android:id="@+id/buttonDec3"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:text="-"
                    android:textStyle="bold"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">

            <CheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaut4"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonInc4"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="+"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewPK4"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="0.31"/>

            <Button
                android:id="@+id/buttonDec4"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="-"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">

            <CheckBox
                android:id="@+id/checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaut5"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonInc5"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="+"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewPK5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="0.31"/>

            <Button
                android:id="@+id/buttonDec5"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="-"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">

            <CheckBox
                android:id="@+id/checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaut6"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonInc6"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="+"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewPK6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="0.31"/>

            <Button
                android:id="@+id/buttonDec6"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="-"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">

            <CheckBox
                android:id="@+id/checkbox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaut7"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonInc7"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="+"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewPK7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="0.31"/>

            <Button
                android:id="@+id/buttonDec7"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="-"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp">

            <CheckBox
                android:id="@+id/checkbox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jaut8"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/buttonInc8"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="+"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewPK8"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="0.31"/>

            <Button
                android:id="@+id/buttonDec8"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:text="-"
                android:textStyle="bold"/>

        </LinearLayout>




    </LinearLayout>




    <TextView
        android:id="@+id/Result"
        android:layout_below="@id/LinlayBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonRun"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:text="Run" />

</RelativeLayout>